# cicero-tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  ci.yml  rust.yml
design_documents/: settings_file_format.txt
src/: application_state.rs  input.rs  main.rs  renderer.rs  view.rs
src/cli/: input.rs  mod.rs  output.rs
src/preview/: character_preview.rs  font_match.rs  mod.rs  stateful_vec.rs  unix_font_fallback.rs
src/settings/: mod.rs  settings.rs
src/settings/test_resources/: test_settings.rsi  test_settings.toml  test_settings_win.toml
src/tui/: character_detail_view.rs  character_preview_canvas.rs  character_property_view.rs  main_view.rs  mod.rs  renderer.rs  stateful_graphemes.rs
src/ucd/: character_properties.rs  mod.rs  plane.rs
src/view/: character_detail_view.rs  character_preview_canvas.rs  main_view.rs  mod.rs  stateful_graphemes.rs  view.rs
