[package]
name = "cicero"
version = "0.1.5"
edition = "2018"
authors = ["Yan Li <eyeplum@gmail.com>"]
license = "GPLv3"
description = "A Unicode tool with terminal user interface"
readme = "README.md"
homepage = "https://github.com/eyeplum/cicero-tui"
repository = "https://github.com/eyeplum/cicero-tui"
keywords = ["cli", "tui", "unicode"]
categories = ["command-line-utilities"]

[dependencies]
cfg-if = "1.0"
clap = "2.33"
crossterm = "0.17"
freetype-rs = "0.25"
hex-slice = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scopeguard = "1.1"

[dependencies.tui]
version = "0.9"
default-features = false
features = ["crossterm"]

[dependencies.unic]
git = "https://github.com/eyeplum/rust-unic.git"
branch = "develop"

[target.'cfg(not(windows))'.dependencies]
servo-fontconfig = "0.5"
